--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media (max-width: 660px) {
+  .sm\:ml-20 {
+    justify-content: center;
+    margin-left: 1rem;
+    text-align: left;
+  }
+}
